--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "three-stdlib": "^2.29.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
