--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "three": "^0.162.0",
     "three-stdlib": "^2.29.6"
   },
